--- a/.github/workflows/genJar.yml
+++ b/.github/workflows/genJar.yml
@@ -17,7 +17,7 @@ jobs:
         cache: gradle
         
     - name: Build with Gradle
-      run: ./buildAndGenJar.bat ec
+      run: ./build.bat ec
         
     - name: Update spider jar
       uses: EndBug/add-and-commit@v7
