--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,8 @@ android {
     defaultConfig {
         applicationId "com.github.catvod.demo"
         minSdk 17
-        targetSdk 28
+        targetSdk 29
+        ndk { abiFilters "armeabi-v7a" }
         buildConfigField("String", "CLIENT_ID", "\"${clientId}\"")
     }
 
